--- a/SimpleTODOList/appsettings.Development.json
+++ b/SimpleTODOList/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "tododb": "server=localhost;port=3306;database=tododb;user=<your_user_name>;password=<your_password>",
+    "tododb": "server=localhost;port=3306;database=tododb;user=<your_user_name>;password=<your_password>"
   },
   "Logging": {
     "LogLevel": {
